# xml-viewer-br

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: release.yml
src/: App.tsx  lib.rs  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: mod.rs  parse.rs  pdf.rs  print.rs  xml_download.rs
src-tauri/src/models/: common.rs  cte.rs  mod.rs  nfe.rs  nfse.rs
src-tauri/src/parser/: cte_parser.rs  detector.rs  mod.rs  nfe_parser.rs  nfse_parser.rs
src/assets/styles/: global.css
src/components/common/: BatchPdfModal.tsx  ChaveValidatorModal.tsx  EmptyState.tsx  FileDropZone.tsx  SettingsModal.tsx  UpdaterModal.tsx  XmlDownloadModal.tsx
src/hooks/: useAssociatedFileOpen.ts  useBatchPdfExport.ts  useFileOpen.ts  usePaginationResize.ts  usePdfExport.ts  useRecentFilePdfExport.ts  useUpdater.ts  useXmlDownload.ts
src/services/: batchZip.ts  fileDiscovery.ts  pdfGenerator.ts  xmlParser.test.ts  xmlParser.ts
src/store/: documentStore.ts
src/types/: common.ts  cte.ts  nfe.ts  nfse.ts
src/utils/: chaveValidator.ts  documentFileNames.ts  documentMeta.tsx  formatters.ts  paginationUtils.ts  persistentStorage.ts  runtime.ts
xml-preview-handler/: Cargo.toml  build.rs
xml-preview-handler/src/: class_factory.rs  exports.def  lib.rs  preview_handler.rs  renderer.rs  xml_info.rs
~/.tauri/: xmlviewer-br.key.pub
(+11 files in other folders)
