[package]
name = "xml-viewer-br"
version = "0.1.0"
description = "Visualizador de XML fiscal brasileiro (NF-e, CT-e, NFS-e)"
authors = ["you"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
roxmltree = "0.20"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
