[package]
name = "xml-preview-handler"
version = "1.0.0"
edition = "2021"
description = "Windows Shell Preview Handler for XML Viewer BR"

[lib]
name = "xml_preview_handler"
crate-type = ["cdylib"]

[build-dependencies]
# build.rs passes the DEF file to the MSVC linker on Windows

[dependencies]
roxmltree = "0.20"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61"
